# Rust

./: README.md
lab1/src/: main.rs
lab2/: Cargo.toml
lab2/example/: decompose_url.rs  password-generator.rs  url_domain.rs
lab2/src/: main.rs
lab3/: Cargo.toml
lab3/examples/: rectangle.rs  traits.rs
lab3/src/: main.rs  spaceship.rs
lab4/: Cargo.toml
lab4/src/: enum_lab.rs  main.rs  match_lab.rs  option_lab.rs  ref.rs
lab5/src/: generic.rs  lifetime.rs  main.rs
