[package]
name = "lab2"
version = "0.1.0"
edition = "2021"

[[example]]
name = "password-generator"
path = "example/password-generator.rs"

[[example]]
name = "url_domain"
path = "example/url_domain.rs"

[[example]]
name = "decompose_url"
path = "example/decompose_url.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
