[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

# cargo run --example rectangle
[[examples]]
name = "rectangle"
path = "examples/rectangle.rs"

[[examples]]
name = "traits"
path = "examples/traits.rs"

[[examples]]
name = "spaceship"
path = "src/spaceship.rs"

[[examples]]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
